--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <div class="question">
               <span> როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</span>
               <button class="toggle-answer">&#9654;</button>
+              <div class="line"></div> 
             </div>
             <div class="answer">
               <p>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:
@@ -178,6 +179,7 @@
             <div class="question">
               <span>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</span>
               <button class="toggle-answer">&#9654;</button>
+              <div class="line"></div> 
             </div>
             <div class="answer">
               <p>TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. 
@@ -189,6 +191,7 @@
             <div class="question">
               <span> რა ღირს სწავლა პროგრამის ფარგლებში?</span>
               <button class="toggle-answer">&#9654;</button>
+              <div class="line"></div> 
             </div>
             <div class="answer">
               <p>პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი ბანკისა და USAID-ის მიერ.</p>
@@ -200,5 +203,20 @@
           </div>
         </div>
       </section>
+
+     <footer>
+        <div class="left-side">
+            <img src="./images/tbcFooter.webp" alt="Logo">
+            <p>© 2023 ყველა უფლება დაცულია</p>
+            <p class="terms-link" onclick="toggleTerms()">წესები და პირობები</p>
+        </div>
+        <div class="right-side">
+            <a href="https://www.facebook.com/tbcbank/"><img src="./images/facebook.webp" alt="Facebook"></a>
+            <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"><img src="./images/youtube.webp" alt="YouTube"></a>
+            <button class="message-button">მოგვწერეთ</button>
+        </div>
+    </footer>
+    
+    </div>
 </body>
 </html>
