--- a/index.html
+++ b/index.html
@@ -206,13 +206,25 @@
 
      <footer>
         <div class="left-side">
+
             <img src="./images/tbcFooter.webp" alt="Logo">
+
             <p>© 2023 ყველა უფლება დაცულია</p>
             <p class="terms-link" onclick="toggleTerms()">წესები და პირობები</p>
+
         </div>
         <div class="right-side">
-            <a href="https://www.facebook.com/tbcbank/"><img src="./images/facebook.webp" alt="Facebook"></a>
-            <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"><img src="./images/youtube.webp" alt="YouTube"></a>
+            <div class="social-links">
+
+              <a href="https://www.facebook.com/tbcbank/">
+              <img src="./images/facebook.webp" alt="Facebook">
+              </a>
+
+              <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ">
+                <img src="./images/youtube.webp" alt="YouTube">
+              </a>
+
+            </div>
             <button class="message-button">მოგვწერეთ</button>
         </div>
     </footer>
